# terraf

./: .gitignore  LICENSE  README.md  analisis_placeres.py  helpers.py  install.ps1  pyproject.toml  run_gui.bat  terraf.toml  terraf_gui.py
mi_proyecto/: terraf.toml
spectraf/: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
spectraf/examples/: analisis_placeres_auriferos.py  ejemplo_uso.py
spectraf/results/: .gitkeep
spectraf/src/spectraf/: __init__.py  core.py  geology.py  indices.py  loaders.py  target_analysis.py  utils.py  visualization.py
src/terraf/: __init__.py  __main__.py  config.py
src/terraf/cli/: __init__.py  analyze.py  art.py  config.py  datos.py  db.py  export.py  geology.py  gui.py  improve.py  indices.py  init.py  load.py  predict.py  prospectivity.py  report.py  status.py  train.py  validate.py  view.py
src/terraf/db/: __init__.py  migrations.py  models.py  session.py
src/terraf/gui/: __init__.py  app.py  main_window.py  map_widget.py  style.py  workers.py
src/terraf/gui/panels/: __init__.py  analyze_panel.py  base.py  home.py  indices_panel.py  layer_panel.py  load_panel.py  ml_panel.py  validate_panel.py
src/terraf/gui/widgets/: terraf_console.py
src/terraf/pipeline/: __init__.py  analyze.py  datos_nacionales.py  exporter.py  geology.py  indices.py  loader.py  mapper.py  project.py  prospectivity.py  reporter.py  validation.py  view.py
src/terraf/pipeline/ml/: __init__.py  active_learning.py  features.py  predictor.py  priors.py  trainer.py
