[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "terraf"
version = "0.1.0"
description = "Herramienta de exploración minera desde escritorio"
requires-python = ">=3.10"
dependencies = [
    # Librería de procesamiento espectral (incluida como subcarpeta del repo)
    "spectraf @ file:./spectraf",
    # CLI
    "typer>=0.12.0",
    "rich>=13.0.0",
    # Base de datos
    "sqlalchemy>=2.0.0",
    # Configuración
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
gui = [
    "PyQt5>=5.15.0",
]
ml = [
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
]
all = [
    "PyQt5>=5.15.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
]

[project.scripts]
terraf     = "terraf.cli:app"
terraf-gui = "terraf.gui.app:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/terraf"]
