[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spectraf"
version = "0.1.0"
description = "Procesamiento de imágenes satelitales para exploración minera"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20.0",
    "rasterio>=1.2.0",
    "matplotlib>=3.3.0",
    "geopandas>=0.10.0",
    "scipy>=1.7.0",
    "shapely>=1.8.0",
    "pyproj>=3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/spectraf"]
